# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "LogseqMarkdownParser"
version = "2.6"
description = "parse logseq markdown text with easy access to properties, hierarchy, TODO etc"
readme = "README.md"
authors = [{ name = "thiswillbeyourgithub"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Logseq", "PKM", "Markdown", "parsing", "parser", "properties", "block", "text"]
dependencies = [
    "fire>=0.5.0",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/thiswillbeyourgithub/LogseqMarkdownParser"

[project.scripts]
LogseqMarkdownParser = "LogseqMarkdownParser:cli"

